<resources>
    <string name="app_name">Alcatel Wi-Fi Link</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="skip">Skip</string>
    <string name="qs_item_pin_code">PIN Code</string>
    <string name="qs_wifi_ssid_prompt">The SSID should be 1–32 characters.</string>
    <string name="qs_wifi_passwd_prompt">The password should be 8–63 characters.</string>
    <string name="puk_code_label">PUK Code</string>
    <string name="qs_hint_sim_pin">SIM PIN</string>
    <string name="remember_sim_pin">Remember SIM PIN</string>
    <string name="qs_pin_unlock_congratulations">Congratulations.</string>
    <string name="qs_pin_unlock_congratulations_des">Connected to the Internet completed</string>
    <string name="network_disconnected">Network disconnected</string>
    <string name="qs_pin_unlock_can_not_connect_des">Check your WAN cabling or SIM card.</string>
    <string name="qs_pin_unlock_to_home">Home &gt;</string>
    <string name="qs_wifi_setting_2G_wifi">2.4GHz Wi-Fi</string>
    <string name="qs_wifi_setting_5G_wifi">5GHz Wi-Fi</string>
    <string name="main_home">Home</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="main_setting">Settings</string>
    <string name="main_sms">SMS</string>
    <string name="Home_no_sim">No SIM card inserted</string>
    <string name="Home_sim_invalid">Invalid SIM card</string>
    <string name="Home_PukTimes_UsedOut">PUK times out</string>
    <string name="Home_PinTimes_UsedOut">PIN times out</string>
    <string name="Home_SimLock_Required">SIM lock required</string>
    <string name="Home_SimCard_Detected">SIM Card detected</string>
    <string name="home_no_service">No service</string>
    <string name="signal">SIGNAL</string>
    <string name="home_initializing">Initializing</string>
    <string name="home_network_type_2g">2G</string>
    <string name="home_network_type_3g">3G</string>
    <string name="home_network_type_3g_plus">3G+</string>
    <string name="home_network_type_4g">4G</string>
    <string name="access_lable">CONNECTED</string>
    <string name="home_sim_loched">SIM card locked</string>
    <string name="home_pin_locked_notice">Verify your PIN code at the home menu first.</string>
    <string name="home_no_sim">No SIM card</string>
    <string name="home_sim_not_accessible">SIM card is not accessible</string>
    <string name="home_usage_over_redial_message">Monthly data plan has been used up. If you want to re-dial, change the monthly values or reset consumption.</string>
    <string name="home_exit_app">Touch again to exit app</string>
    <string name="usage_view_duration">Duration</string>
    <string name="usage_status_des">No data plan set yet</string>
    <string name="usage_duration">%1$dh %2$dm</string>
    <string name="usage_setting_mobile_data">Mobile data</string>
    <string name="usage_setting_timelimit">limit</string>
    <string name="usage_setting_settimelimit">Set Time Limit:</string>
    <string name="usage_setting_usage">Usage</string>
    <string name="usage_setting_billingday">Billing cycle</string>
    <string name="usage_setting_usagealert">Usage alert</string>
    <string name="usage_setting_usagealertunit">%</string>
    <string name="usage_setting_monthlysataplan">Monthly data limit</string>
    <string name="usage_setting_roaming">Data roaming</string>
    <string name="auto_disconnect">Auto disconnect</string>
    <string name="password">Password</string>
    <string name="ssid_broadcast">SSID broadcast</string>
    <string name="channel">Channel</string>
    <string name="sms_title">Message</string>
    <string name="sms_empty">No SMS</string>
    <string name="sms_list_view_draft">%1$d,draft</string>
    <string name="fail">Fail</string>
    <string name="sms_report_message">delivered.</string>
    <string name="sms_to">To:</string>
    <string name="sms_error_send_error">Couldn\'t send SMS.</string>
    <string name="sms_send_success">Send SMS completed.</string>
    <string name="sms_error_message_full_storage">SMS box is full. Delete some SMS to send/save new SMS.</string>
    <string name="sms_delete_multi_success">Delete conversation completed.</string>
    <string name="sms_delete_error">Couldn\'t delete SMS.</string>
    <string name="sms_delete_success">Delete SMS completed.</string>
    <string name="sms_number_invalid">Error. Only 3 phone numbers are allowed.</string>
    <string name="sms_save_success">SMS is saved as a draft.</string>
    <string name="sms_save_error">Couldn\'t save SMS.</string>
    <string name="sms_unread_num">(%1$d)</string>
    <string name="setting_imsi">IMSI</string>
    <string name="setting_sim_number">SIM number</string>
    <string name="change_pin">Change SIM PIN</string>
    <string name="setting_set_data_plan">Set data plan</string>
    <string name="setting_network_connect_mode">Connection mode</string>
    <string name="device_manage_title">Devices</string>
    <string name="device_manage_connected">Connected Devices (%1$d)</string>
    <string name="device_manage_block">Block Devices (%1$d)</string>
    <string name="device_manage_block_btn">BLOCK</string>
    <string name="device_manage_unblock_btn">UNBLOCK</string>
    <string name="device_manage_ip">IP: %1$s</string>
    <string name="device_manage_mac">MAC: %1$s</string>
    <string name="device_manage_name_empty">Device name is invalid.</string>
    <string name="setting_network">Network</string>
    <string name="setting_mobile_network">Mobile network</string>
    <string name="ethernet_wan_connection">Ethernet WAN connection</string>
    <string name="setting_on_state">On</string>
    <string name="setting_off_state">Off</string>
    <string name="setting_share">Sharing service</string>
    <string name="setting_firmware_upgrade">Firmware updates</string>
    <string name="setting_restart_reset">Restart &amp; reset</string>
    <string name="setting_backup_restore">Backup &amp; restore</string>
    <string name="setting_not_support_sharing_service">Do not support sharing services</string>
    <string name="device">Device</string>
    <string name="setting_usb_storage">USB Storage</string>
    <string name="setting_about">About</string>
    <string name="setting_wifi">Wi-Fi</string>
    <string name="setting_sharing">FTP&amp;DLNA</string>
    <string name="setting_sharing_ftp">FTP</string>
    <string name="setting_sharing_dlna">DLNA</string>
    <string name="setting_text_2point4G_wifi">2.4G Wi-Fi</string>
    <string name="setting_text_5G_wifi">5G Wi-Fi</string>
    <string name="setting_text_ssid">SSID:</string>
    <string name="setting_wifi_set_success">Change Wi-Fi settings completed.</string>
    <string name="setting_wifi_set_failed">Couldn\'t change Wi-Fi settings.</string>
    <string name="setting_wep_password_error_prompt">WEP Key is 5 or 13 ASCII characters, or 10 or 26 hexadecimal digits
        and WEP Key should be ASCII characters ranging from 32 - 127, except for: , \&quot; : ; &amp; \\.</string>
    <string name="setting_wpa_password_error_prompt">The WPA Pre–Shared Key (PSK) should be 8–63 ASCII characters and WPA PSK should be ASCII characters ranging from 32–127, except for: , \&quot; : ; &amp; \\.</string>
    <string name="done">Done</string>
    <string name="setting_upgrade_no_new_version">No new version</string>
    <string name="setting_upgrade_no_connection">No connection</string>
    <string name="setting_upgrade_firmware_warning">The update process will continue for a few minutes, do not power off. Update now?</string>
    <string name="setting_upgrade">Update</string>
    <string name="setting_upgrade_stop_error">Couldn\'t update.</string>
    <string name="setting_upgrade_not_available">Service not available</string>
    <string name="setting_upgrade_get_update_state_failed">Couldn\'t get device update state.</string>
    <string name="setting_upgrade_start_update_failed">Device couldn\'t start update.</string>
    <string name="setting_upgrade_check_firmware_failed">Couldn\'t get New version.</string>
    <string name="restart">Restart</string>
    <string name="setting_failed">Failed</string>
    <string name="setting_ssid_invalid">SSID can contain only a–z, A–Z, 0–9, - . _ and space. Length should be less than 32.</string>
    <string name="setting_current_password">Current password</string>
    <string name="setting_new_password">New password (4–16 characters)</string>
    <string name="setting_confirm_password">Confirm new password</string>
    <string name="setting_password_note">Note: The password should be 4–16 characters.</string>
    <string name="setting_network_mode">mode</string>
    <string name="setting_network_selection">Network Selection</string>
    <string name="setting_network_try_again">Disconnecting… Try again later.</string>
    <string name="setting_network_profile_management">Profile Management</string>
    <string name="setting_network_mode_auto">Auto</string>
    <string name="setting_network_mode_2G_only">2G Only</string>
    <string name="setting_network_mode_3G_only">3G Only</string>
    <string name="setting_network_mode_LTE_only">4G Only</string>
    <string name="other_login_warning_title">Login warning</string>
    <string name="usage_limit_over_notification_content">Monthly data usage limit reached</string>
    <string name="dialog_delete_title">Confirm Deletion</string>
    <string name="dialog_delete_content">Confirm deletion of this chat\'s history</string>
    <string name="dialog_delete_content_description">Long press the SMS to delete.</string>
    <string name="dialog_delete_multi_sms_content">Delete this message(s)?</string>
    <string name="pin_error_waring_title">The PIN code is wrong.</string>
    <string name="puk_new_pin_label">New PIN:</string>
    <string name="puk_confirm_pin_label">Confirmed PIN:</string>
    <string name="puk_error_waring_title">The PUK code is wrong.</string>
    <string name="error_info">Error</string>
    <string name="btn_reply">Retry</string>
    <string name="IDS_PIN_LOCKED">PIN Locked</string>
    <string name="IDS_PUK_LOCKED">PUK Locked</string>
    <string name="login_invalid_password"><![CDATA[Invalid password. The password only can include 0–9, a-z, A-Z, \"-+.@$#^&*\"]]></string>
    <string name="login_other_user_logined_error_msg">Other user is login\nplease log in again after a moment.</string>
    <string name="login_other_user_logined_error_forcelogin_msg">Other user already loged in, do you still want to login? This will kick other user off.</string>
    <string name="login_login_time_used_out_msg">Login times used out\nyou can login until the device reboot.</string>
    <string name="login_login_app_or_webui">If disable guest AP UI access\nguest AP can’t access WEB UI</string>
    <string name="login_logout_successful">Logout completed.</string>
    <string name="login_logout_failed">Couldn\'t logout.</string>
    <string name="inconsistent_new_password">New passwords don\'t match.</string>
    <string name="input_current_password">Enter your current password.</string>
    <string name="ok">OK</string>
    <string name="guide3_title">SECURE CONNECTION</string>
    <string name="guide3_description">Easily manage connected users and block those you don\'t want to connect to your network.</string>
    <string name="what_new_btn_text">Start</string>
    <string name="dhcp_renew">Renew</string>
    <string name="preferred_dns">Preferred DNS</string>
    <string name="secondary_dns">Secondary DNS</string>
    <string name="default_gateway">Default gateway(optional)</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="ip_address">IP Address</string>
    <string name="country_region">County/Region</string>
    <string name="mode_802_11">802.11 mode</string>
    <string name="ap_isolation">AP isolation</string>
    <string name="bandwidth">Bandwidth</string>
</resources>