<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pop_conner">

    <TextView
        android:id="@+id/tv_pop_mode_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_15dip"
        android:paddingStart="@dimen/dimen_15dip"
        android:text="@string/setting_network_mode_auto"
        android:textColor="@color/black"
        app:layout_heightPercent="9%sh"
        app:layout_textSizePercent="3%sh" />

    <TextView
        android:id="@+id/tv_pop_connMode_4G"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pop_mode_auto"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_15dip"
        android:paddingStart="@dimen/dimen_15dip"
        android:text="@string/home_network_type_4g"
        android:textColor="@color/black"
        app:layout_heightPercent="9%sh"
        app:layout_textSizePercent="3%sh" />

    <TextView
        android:id="@+id/tv_pop_connMode_3G"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pop_connMode_4G"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_15dip"
        android:paddingStart="@dimen/dimen_15dip"
        android:text="@string/home_network_type_3g"
        android:textColor="@color/black"
        app:layout_heightPercent="9%sh"
        app:layout_textSizePercent="3%sh" />

    <TextView
        android:id="@+id/tv_pop_connMode_2G"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pop_connMode_3G"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_15dip"
        android:paddingStart="@dimen/dimen_15dip"
        android:text="@string/home_network_type_2g"
        android:textColor="@color/black"
        app:layout_heightPercent="9%sh"
        app:layout_textSizePercent="3%sh" />

</com.zhy.android.percent.support.PercentRelativeLayout>
