<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <!-- banner -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mg_blue"
        app:layout_heightPercent="9%h">

        <ImageView
            android:id="@+id/iv_wlan_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            app:layout_heightPercent="50%h"
            app:layout_widthPercent="50%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wifi_settings"
            android:textColor="@color/white"
            app:layout_textSizePercent="30%h" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ssid_broadcast"
            android:textColor="@color/black" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_ssid_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </com.hiber.tools.layout.PercentRelativeLayout>

    <!-- country -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/country_region"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_country_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:entries="@array/wlan_settings_country"
            android:spinnerMode="dialog" />
    </com.hiber.tools.layout.PercentRelativeLayout>

    <!-- channel -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/channel"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_channel_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:entries="@array/wlan_settings_channel"
            android:spinnerMode="dialog" />
    </com.hiber.tools.layout.PercentRelativeLayout>

    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/mode_802_11"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_802_11_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:entries="@array/wlan_settings_80211_2g"
            android:spinnerMode="dialog" />
    </com.hiber.tools.layout.PercentRelativeLayout>

    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/ap_isolation"
            android:textColor="@color/black" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_ap_isolation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </com.hiber.tools.layout.PercentRelativeLayout>

    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/bandwidth"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_bandwidth_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:entries="@array/wlan_settings_bandwidth_2g"
            android:spinnerMode="dialog" />
    </com.hiber.tools.layout.PercentRelativeLayout>

    <Button
        android:id="@+id/bt_wlan_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_conner_btn_login_blue"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_textSizePercent="2.5%h" />

</com.hiber.tools.layout.PercentLinearLayout>
