<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42a147">

    <View
        android:id="@+id/v_splitrx"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/v_splitrx"
        android:layout_centerHorizontal="true"
        android:src="@drawable/guide3"
        app:layout_heightPercent="60%w"
        app:layout_marginBottomPercent="3%h"
        app:layout_widthPercent="60%w" />

    <TextView
        android:id="@+id/tv_guide_rx_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_splitrx"
        android:layout_centerHorizontal="true"
        android:text="@string/guide3_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_textSizePercent="2.8%h" />

    <TextView
        android:id="@+id/tv_guide_rx_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_guide_rx_title"
        android:layout_centerHorizontal="true"
        android:text="@string/guide3_description"
        android:textColor="@color/white"
        app:layout_marginPercent="4%w"
        app:layout_textSizePercent="2.6%h" />

    <Button
        android:id="@+id/bt_guide_rx_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_guide_rx_des"
        android:layout_centerHorizontal="true"
        android:background="@drawable/guiderx_bt"
        android:text="@string/what_new_btn_text"
        android:textColor="#42a147"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_textSizePercent="2.5%h"
        app:layout_heightPercent="6%h"
        app:layout_marginTopPercent="10%h"
        app:layout_widthPercent="40%w" />

</com.hiber.tools.layout.PercentRelativeLayout>
