<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dip"
    android:layout_height="187dip"
    android:background="@drawable/dialog_bg" >

    <LinearLayout
        android:id="@+id/ID_ERROR_DIALOG_TOP_LAYOUT"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/error_dialog_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="8dip"
                android:text="@string/setting_wifi"
                android:textColor="@color/color_black"
                android:textSize="13sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/color_divider" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ID_ERROR_DIALOG_IMAGE_LAYOUT"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:layout_below="@id/ID_ERROR_DIALOG_TOP_LAYOUT" >

        <TextView
            android:id="@+id/tv_error_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setting_ssid_invalid"
            android:textColor="@color/color_black"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="43dip"
        android:layout_below="@id/ID_ERROR_DIALOG_IMAGE_LAYOUT"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/ID_BUTTON_OK"
            android:layout_width="80dip"
            android:layout_height="30dip"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_common_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@drawable/common_button_text" />
    </RelativeLayout>

</RelativeLayout>